# toolbox_mediaprocessing

./: .gitignore  README.md
banner_generation/: CMakeLists.txt  README.md  main.cpp
cut_and_concat/: README.md  concat_segments.sh  cut_video.sh
enhancer/: CMakeLists.txt  README.md  main.cpp
mosaic_teaser_generator/: CMakeLists.txt  README.md  main.cpp
resizer/: CMakeLists.txt  README.md  main.cpp
slowmotion/: CMakeLists.txt  README.md  main.cpp
teaser/: CMakeLists.txt  README.md  main.cpp
utils/: ERW.sh
watermark/: CMakeLists.txt  README.md  main.cpp
